# cognite-function-examples

./: CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
examples/01-creating-a-function-from-a-notebook/: create-cognite-function.ipynb
examples/02-creating-a-function-from-a-folder/: create-cognite-function.ipynb  handler.py
examples/03-contextualization-using-a-cognite-function/: contextualization-using-cognite-functions.ipynb  handler.py  requirements.txt
