[tool.poetry]
name = "cognite-function-examples"
version = "0.1.0"
description = ""
authors = ["Ivar Stangeby <ivar.stangeby@cognite.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cognite-sdk-experimental = "0.82.0"
jupyterlab = "^3.3.4"
msal = "^1.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
